# sum_factorization_kernels

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: evaluation_cell_laplacian_no_tiling.h  evaluation_dg_advect.h  evaluation_dg_laplacian.h  evaluation_dgele_advect.h  evaluation_dgele_laplacian.h  precomputed_dg_laplacian.h
legacy/: CMakeLists.txt  README.md  build.sh  run-locally.sh  run.sh
legacy/cmake/modules/: FindLikwid.cmake
legacy/include/: evaluation_dg_laplacian.h
legacy/src/: test_dg_integrate.cc
performance-tests/initialize/: CMakeLists.txt
performance-tests/initialize/include/: evaluation_dg_laplacian.h
performance-tests/initialize/src/: main.cc
performance-tests/inner_loop/: CMakeLists.txt  compile_all.sh  inner-loop-out.txt  run.sh
performance-tests/inner_loop/include/: evaluation_dg_laplacian.h
performance-tests/inner_loop/src/: main.cc
performance-tests/inner_loop_mocked/: CMakeLists.txt  compile_all.sh  run.sh  run_verifier.sh
performance-tests/inner_loop_mocked/cmake/modules/: FindLikwid.cmake
performance-tests/inner_loop_mocked/include/: evaluation_dg_laplacian.h  matrix_vector_kernel.h
performance-tests/inner_loop_mocked/src/: main.cc
performance-tests/matvec-kernel/: CMakeLists.txt  README.md  compile_all.sh  run_matvec_kernel_test.sh  run_verifier.sh
performance-tests/matvec-kernel/include/: evaluation_dg_laplacian.h  matrix_vector_kernel.h  vectorization.h
performance-tests/matvec-kernel/results/: matvec-caches-measurement.out  matvec-energy-measurement.out  matvec-false-sharing-measurement.out  matvec-flops-measurement.out  matvec-memory-measurement.out
performance-tests/matvec-kernel/src/: main.cc  verification_test_dg_integrate.cc
performance-tests/omp_tests/: CMakeLists.txt  compile_all.sh  run_reduction_test.sh
performance-tests/omp_tests/src/: main.cc
src/: benchmark_loops.cc  test_dg_advect.cc  test_dg_integrate.cc  test_dg_precomputed.cc  test_polynomial.cc  test_program.cc  test_program_vect.cc
